--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.2",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "redux": "4.1.2",
+    "react-redux": "7.2.8",
+    "expo-linking": "3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
